# gategpt

./: .dockerignore  .env  .env.template  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  render.yaml  seeder.py  serve.py
alembic/: env.py
alembic/versions/: 0ea5ee5a4cae_06_user_account_oauth2_support.py  2b422c447ac0_01_first_migration.py  2bf907b56ce2_08_add_user_table.py  4cb2f0a5a2f0_01_first_migration.py  6c8aa336cfa9_06_user_account_oauth2_support.py  7cf748fbb250_02_add_custom_gpt_details.py  88e5239dd9be_04_allow_oauth_verification.py  8dd904135bd5_05_add_archived_at.py  ae1530fe8d07_03_allow_multiple_accounts_same_email.py  cb045f0e4cf1_07_rename_user_account_gpt_application.py
src/custom_gpts_paywall/: api.py  config.py  dependencies.py  emailer.py  main.py  models.py  utils.py
src/custom_gpts_paywall/routers/: auth.py  google_oauth.py  gpt_app_session.py  gpt_application.py  oauth2_server.py  openapi_schema.py  root.py  user_account.py  user_session.py  verification.py
src/gategpt/: __init__.py  config.py  dependencies.py  emailer.py  main.py  models.py
src/gategpt/routers/: auth.py  gpt_app_session.py  gpt_application.py  oauth2_server.py  openapi_schema.py  root.py
static/assets/css/: portal.css
static/assets/js/: app.js  charts-demo.js  gpt-app-sessions.js  gpt-detail.js  home.js  main.js  (+2 more)
templates/: 404.html  500.html  base.html  gpt_app_sessions.html  gpt_application_detail.html  home.html  login.html  login_fail.html  register_gpt.html  registergpt.html
(+61 files in other folders)
